samples/_failures_safe/1761084571_241fe9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45b3165d.c: In function ‘main’:
./samples/SAFE/__tmp_45b3165d.c:140:9: error: expected declaration or statement at end of input
  140 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_45b3165d.c:140:9: error: expected declaration or statement at end of input
